--- a/Frontend/src/Dashboard/dashboard.module.css
+++ b/Frontend/src/Dashboard/dashboard.module.css
@@ -1,52 +1,45 @@
-/* .rating {
-  unicode-bidi: bidi-override;
-  direction: rtl;
+.hide {
+  display: none;
 }
-.rating > span {
-  display: inline-block;
-  position: relative;
-  width: 1.5em;
+
+.clear {
+  float: none;
+  clear: both;
 }
-.rating > span:hover:before,
-.rating > span:hover ~ span:before {
-  content: "\2605";
-  position: absolute;
-  color: #ffd32a;
-} */
 
 .rating {
-  float: left;
-  width: 300px;
-}
-.rating span {
-  float: right;
+  width: 90px;
+  unicode-bidi: bidi-override;
+  direction: rtl;
+  text-align: center;
   position: relative;
 }
-.rating span input {
+
+.rating > label {
+  width: 1.1em;
+  float: right;
+  /* display: inline; */
+  padding: 0;
+  margin: 0;
+  position: relative;
+  cursor: pointer;
+  color: #000;
+}
+
+.rating > label:hover,
+.rating > label:hover ~ label,
+.rating > input.radioBtn:checked ~ label {
+  color: transparent;
+}
+
+.rating > label:hover:before,
+.rating > label:hover ~ label:before,
+.rating > input.radioBtn:checked ~ label:before,
+.rating > input.radioBtn:checked ~ label:before {
+  content: "\2605";
   position: absolute;
-  top: 0px;
-  left: 0px;
-  opacity: 0;
-}
-.rating span label {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  text-align: center;
-  color: #fff;
-  background: #ccc;
-  font-size: 30px;
-  margin-right: 2px;
-  line-height: 30px;
-  border-radius: 50%;
-  -webkit-border-radius: 50%;
-}
-.rating span:hover ~ span label,
-.rating span:hover label,
-.rating span.checked label,
-.rating span.checked ~ span label {
-  background: #ffd32a;
-  color: #fff;
+  left: 0;
+  color: #ffd700;
 }
 
 .activeBtn {
