--- a/Frontend/src/LandingPage/Nav.module.css
+++ b/Frontend/src/LandingPage/Nav.module.css
@@ -7,3 +7,11 @@ bottom: 0px;
 left: 0px;
 background-color: rgba(255,255,255, 0.35);
 } */
+
+.fbBtn {
+  background: #01579b;
+  color: white;
+  border: 1px solid #01579b;
+  padding: 1% 2%;
+  border-radius: 5px;
+}
