--- a/Frontend/src/Dashboard/dashboard.module.css
+++ b/Frontend/src/Dashboard/dashboard.module.css
@@ -48,6 +48,11 @@
   border: 1px solid #01579b;
 }
 
+.textColor {
+  color: #01579b;
+  font-weight: bold;
+}
+
 .normalBtn {
   background: white;
   color: black;
@@ -60,3 +65,13 @@
 /* Restaurants:hover{
   background-color: skyblue;
 } */
+
+.scrollContent > .row {
+  display: block;
+  overflow-x: auto;
+  white-space: nowrap;
+}
+
+.scrollContent > .row > .col-1 {
+  display: inline-block;
+}
