--- a/Frontend/src/Dashboard/dashboard.module.css
+++ b/Frontend/src/Dashboard/dashboard.module.css
@@ -66,12 +66,19 @@
   background-color: skyblue;
 } */
 
-.scrollContent > .row {
-  display: block;
+.scrollContent {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  max-height: 240px;
   overflow-x: auto;
-  white-space: nowrap;
 }
 
-.scrollContent > .row > .col-1 {
-  display: inline-block;
+.scrollContent::-webkit-scrollbar {
+  width: 0;
+}
+
+.scrollContent .col-1 {
+  text-align: center;
+  min-width: 150px;
 }
