--- a/Frontend/src/LandingPage/Nav.module.css
+++ b/Frontend/src/LandingPage/Nav.module.css
@@ -10,10 +10,10 @@ box-shadow: none;
 border: none;
 } */
 
-/* .fbBtn {
+.fbBtn {
   background: #01579b;
   color: white;
   border: 1px solid #01579b;
   padding: 1% 2%;
   border-radius: 5px;
-} */
+}
